Minor update - All jailbreaks and vulnerabilities in a list   - You can show and hide the list   - It will be displayed regardless of OS - Fix iOS background (once again) - Last item of list will not have line at the bottom - Formatted some code - Add notes for jailbreaks too - Info for unc0ver 14.4 - 14.8 - Instead of removing a number, only show it

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -103,6 +103,22 @@ a:link, a:visited {
     text-align: center;
 }
 
+.alljb > div,
+.allvuln > div {
+    transition: all .5s ease;
+    height: auto;
+    overflow: hidden;
+}
+
+.list div:last-child > div > hr {
+    display: none;
+}
+
+.container button {
+    border: none;
+    padding: 5px 15px;
+}
+
 @media only screen and (min-width: 700px) {
     body {
         background-position: center;
